--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,6 @@
 ---
 const today = new Date();
 ---
-
-<footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+<footer class="p-6 text-center">
+	{today.getFullYear()} YOUR NAME HERE. All rights reserved.
 </footer>
-<style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
-</style>
