Navbar, updated collection schema

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,11 +20,11 @@ const navItems = [
 
 ---
 
-<nav class="w-full inline-flex bg-gray-500">
+<nav class="w-full inline-flex bg-gray-900 ml-auto">
   {navItems.map(item => {
     return (
-      <a href={item.link} class="p-4 m-1 bg-gray-400">
-        <span class="">
+      <a href={item.link} class="p-4 m-1 ">
+        <span class="uppercase font-semibold tracking-widest text-white">
           {item.name}
         </span>
       </a>
