--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,14 +8,14 @@ import BaseLayout from './BaseLayout.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, date, updatedDate, thumbnail } = Astro.props;
 ---
 
 <BaseLayout>
 	<article>
-		{heroImage && <img width={720} height={360} src={heroImage} alt="" />}
+		{thumbnail && <img width={720} height={360} src={thumbnail} alt="" />}
 		<h1 class="title">{title}</h1>
-		<FormattedDate date={pubDate} />
+		<FormattedDate date={date} />
 		{
 			updatedDate && (
 				<div class="last-updated-on">
