--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,7 +4,7 @@ import FormattedDate from '../../components/FormattedDate.astro';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+	(a, b) => a.data.date.valueOf() - b.data.date.valueOf()
 );
 ---
 
@@ -14,7 +14,7 @@ const posts = (await getCollection('blog')).sort(
 			{
 				posts.map((post) => (
 					<li>
-						<FormattedDate date={post.data.pubDate} />
+						<FormattedDate date={post.data.date} />
 						<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
 					</li>
 				))
