--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,14 +20,19 @@ const navItems = [
 
 ---
 
-<nav class="w-full inline-flex bg-gray-900 ml-auto">
-  {navItems.map(item => {
-    return (
-      <a href={item.link} class="p-4 m-1 ">
-        <span class="uppercase font-semibold tracking-widest text-white">
-          {item.name}
-        </span>
-      </a>
-    );
-  })}
+<nav class="w-full inline-flex bg-gray-900 p-5">
+  <div class="flex-1">
+    <h1 class="text-white font-bold pl-6">Harry Ross</h1>
+  </div>
+  <div class="flex-none flex items-center">
+    {navItems.map(item => {
+      return (
+        <a href={item.link} class="px-5">
+          <span class="uppercase font-semibold tracking-widest text-white">
+            {item.name}
+          </span>
+        </a>
+      );
+    })}
+  </div>
 </nav>
