--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
-		<main class="max-w-2xl mx-auto p-8 bg-gray-500">
+		<main class="max-w-3xl mx-auto p-8 border-2 rounded-md">
 			<slot />
 		</main>
 		<Footer />
