--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,8 @@
 ---
-import { SITE_TITLE } from '../consts';
-import Navbar from './Navbar.astro';
+import { SITE_TITLE } from "../consts";
+import Navbar from "./Navbar.astro";
 ---
 
-<header>
+<header class="sticky top-0">
 	<Navbar />
 </header>
-<style>
-	header {
-		margin: 0em 0 2em;
-	}
-	h2 {
-		margin: 0.5em 0;
-	}
-</style>
