--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,38 +1,39 @@
 ---
 const navItems = [
   {
-    name: 'Home',
-    link: '/'
+    name: "Home",
+    link: "/",
   },
   {
-    name: 'Blog',
-    link: '/blog'
+    name: "Blog",
+    link: "/blog",
   },
   {
-    name: 'About',
-    link: '/about'
+    name: "About",
+    link: "/about",
   },
   {
-    name: 'Twitter',
-    link: 'https://twitter.com/harryrossdev'
-  }
-]
-
+    name: "Twitter",
+    link: "https://twitter.com/harryrossdev",
+  },
+];
 ---
 
-<nav class="w-full inline-flex bg-gray-900 p-5">
+<nav
+  class="w-full inline-flex border-b-[1px] p-5 tracking-[0.35em] bg-zinc-800"
+>
   <div class="flex-1">
-    <h1 class="text-white font-bold pl-6">Harry Ross</h1>
+    <h1 class="text-white pl-6 uppercase font-semibold">Harry Ross</h1>
   </div>
   <div class="flex-none flex items-center">
-    {navItems.map(item => {
-      return (
-        <a href={item.link} class="px-5">
-          <span class="uppercase font-semibold tracking-widest text-white">
-            {item.name}
-          </span>
-        </a>
-      );
-    })}
+    {
+      navItems.map((item) => {
+        return (
+          <a href={item.link} class="px-5">
+            <span class="uppercase font-light text-white">{item.name}</span>
+          </a>
+        );
+      })
+    }
   </div>
 </nav>
