--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-	<h1 class="text-red-700">Testing</h1>
+	<section class="bg-gradient-to-b from-[#4F7D8B] h-screen">
+		<div class="mx-auto">Testing</div>
+	</section>
 </BaseLayout>
