--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,4 +10,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 	<section class="bg-gradient-to-b from-[#4F7D8B] h-screen">
 		<div class="mx-auto">Testing</div>
 	</section>
+	<section>
+		<h1>My Projects</h1>
+	</section>
 </BaseLayout>
