Added centering of heading div

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 const today = new Date();
 ---
+
 <footer class="p-6 text-center">
-	{today.getFullYear()} YOUR NAME HERE. All rights reserved.
+	{today.getFullYear()} Harry Ross. All rights reserved.
 </footer>
