Added animation library, upgraded Astro

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const today = new Date();
 ---
 
-<footer class="p-6 text-center">
+<footer class="bg-zinc-900 p-6 mt-8 text-center">
 	{today.getFullYear()} Harry Ross. All rights reserved.
 </footer>
