--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,8 +13,8 @@ const navItems = [
     link: "/about",
   },
   {
-    name: "Twitter",
-    link: "https://twitter.com/harryrossdev",
+    name: "GitHub",
+    link: "https://github.com/Harry-Ross",
   },
 ];
 ---
