--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import Card from "../components/Card.astro"
 import Section from "../components/Section.astro";
 import { Image } from "@astrojs/image/components";
 
@@ -65,9 +66,7 @@ const blogs = blogCollection.map((blog) => ({
 	<Section>
 		<h1 class="text-5xl font-bold pb-12">My Projects</h1>
 		{projects.map(data => (
-			<article 
-			style={"background: linear-gradient(180deg, #454545 45.83%, rgba(140, 140, 140, 0.41) 100%);"}
-			class="p-8 md:grid md:grid-cols-2 gap-4 w-full border-[#9B9B9B] border-2 rounded-2xl">
+			<Card class="md:grid md:grid-cols-2 gap-4">
 				<div class="col-span-1">
 					<h2 class="py-2 text-4xl font-bold tracking-wider">{data.name}</h1>
 					<p class="py-4 text-xl">{data.description}</p>
@@ -76,7 +75,7 @@ const blogs = blogCollection.map((blog) => ({
 				<div class="col-span-1">
 
 				</div>
-			</article>
+			</Card>
 		))}
 		
 	</Section>
@@ -85,15 +84,11 @@ const blogs = blogCollection.map((blog) => ({
 		<h1 class="text-5xl font-bold pb-12">Blog</h1>
 		<div class="md:grid md:grid-cols-2 gap-4">
 			{blogs.map(blog => 
-				<article 
-				style={"background: linear-gradient(180deg, #454545 45.83%, rgba(140, 140, 140, 0.41) 100%);"}
-				class="p-8 w-full border-[#9B9B9B] border-2 rounded-2xl">
-					<div class="col-span-1">
-						<h2 class="py-2 text-4xl font-bold tracking-wider">{blog.title}</h1>
-						<p class="py-4 text-xl">{blog.description}</p>
-						<p class="text-lg"><a class="underline" href={blog.url}>Read more</a></p>
-					</div>
-				</article>
+				<Card>
+					<h2 class="py-2 text-4xl font-bold tracking-wider">{blog.title}</h1>
+					<p class="py-4 text-xl">{blog.description}</p>
+					<p class="text-lg"><a class="underline" href={blog.url}>Read more</a></p>
+				</Card>
 			)}
 		</div>
 	</Section>
