--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,6 +2,7 @@
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import Section from '../../components/Section.astro';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => a.data.date.valueOf() - b.data.date.valueOf()
@@ -9,16 +10,18 @@ const posts = (await getCollection('blog')).sort(
 ---
 
 <BaseLayout>
-	<section>
-		<ul>
+	<Section>
 			{
 				posts.map((post) => (
-					<li>
-						<FormattedDate date={post.data.date} />
-						<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
-					</li>
+					<a href={`/blog/${post.slug}/`}>
+						<article class="my-5">
+							<h2 class="text-4xl font-bold">{post.data.title}</h2>
+							<FormattedDate date={post.data.date} />
+							{post.data.thumbnail && <img width={720} height={360} src={post.data.thumbnail} alt="" />}
+							<p class="text-xl">{post.data.description}</p>
+						</article>
+					</a>
 				))
 			}
-		</ul>
-	</section>
+	</Section>
 </BaseLayout>
