Added basic blog post display

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,3 +1,11 @@
-<section class="mx-auto max-w-6xl mt-12">
+---
+interface Props {
+  class?: string;
+}
+
+const classProp = Astro.props.class;
+---
+
+<section class:list={[classProp, "mx-auto max-w-6xl mt-12"]}>
   <slot/>
 </section>
