--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,9 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
+import Section from '../../components/Section.astro';
+import FormattedDate from '../../components/FormattedDate.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
@@ -13,9 +16,23 @@ type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
 const { Content } = await post.render();
+const { title, description, date, updatedDate, thumbnail } = post.data;
 ---
 
-<BlogPost {...post.data}>
-	<h1>{post.data.title}</h1>
-	<Content />
-</BlogPost>
+<BaseLayout>
+	<Section class="prose prose-invert">
+		{thumbnail && <img width={720} height={360} src={thumbnail} alt="" />}
+		<h1 class="title">{title}</h1>
+		<FormattedDate date={date} />
+		{
+			updatedDate && (
+				<div class="last-updated-on">
+					Last updated on <FormattedDate date={updatedDate} />
+				</div>
+			)
+		}
+		<hr />
+		<h1>{post.data.title}</h1>
+		<Content />
+	</Section>
+</BaseLayout>
