--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+// import Layout from '../layouts/BlogPost.astro';
 ---
 
-<Layout
+<!-- <Layout
 	title="About Me"
 	description="Lorem ipsum dolor sit amet"
 	date={new Date('August 08 2021')}
@@ -60,4 +60,4 @@ import Layout from '../layouts/BlogPost.astro';
 		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
 		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
 	</p>
-</Layout>
+</Layout> -->
