--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,9 +14,11 @@ const posts = (await getCollection('blog')).sort(
 			{
 				posts.map((post) => (
 					<a href={`/blog/${post.slug}/`}>
-						<article class="my-5">
-							<h2 class="text-4xl font-bold">{post.data.title}</h2>
-							<FormattedDate date={post.data.date} />
+						<article class="my-8">
+							<div class="my-4">
+								<h2 class="text-4xl mb-1 font-bold">{post.data.title}</h2>
+								<FormattedDate class="italic" date={post.data.date} />
+							</div>
 							{post.data.thumbnail && <img width={720} height={360} src={post.data.thumbnail} alt="" />}
 							<p class="text-xl my-4">{post.data.description}</p>
 						</article>
