--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,11 +1,15 @@
 ---
+import { twMerge } from "tailwind-merge";
+
 interface Props {
-  class?: string;
+	class?: string;
 }
 
 const classProp = Astro.props.class;
+
+const classes = twMerge("mx-auto max-w-6xl mt-12", classProp);
 ---
 
-<section class:list={[classProp, "mx-auto max-w-6xl mt-12"]}>
-  <slot/>
+<section class={classes}>
+	<slot />
 </section>
