--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,30 +1,38 @@
 ---
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import Section from '../../components/Section.astro';
+import { getCollection } from "astro:content";
+import FormattedDate from "../../components/FormattedDate.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import Section from "../../components/Section.astro";
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.date.valueOf() - b.data.date.valueOf()
+const posts = (await getCollection("blog")).sort(
+	(a, b) => b.data.date.valueOf() - a.data.date.valueOf()
 );
 ---
 
 <BaseLayout>
 	<Section>
-			{
-				posts.map((post) => (
-					<a href={`/blog/${post.slug}/`}>
-						<article class="my-8">
-							<div class="my-4">
-								<h2 class="text-4xl mb-1 font-bold">{post.data.title}</h2>
-								<FormattedDate class="italic" date={post.data.date} />
-							</div>
-							{post.data.thumbnail && <img width={720} height={360} src={post.data.thumbnail} alt="" />}
-							<p class="text-xl my-4">{post.data.description}</p>
-						</article>
-						<hr class="border-slate-400" />
-					</a>
-				))
-			}
+		{
+			posts.map((post) => (
+				<a href={`/blog/${post.slug}/`}>
+					<article class="my-8">
+						<div class="my-4">
+							<h2 class="text-4xl mb-1 font-bold">{post.data.title}</h2>
+							<FormattedDate class="italic" date={post.data.date} />
+						</div>
+						{post.data.thumbnail && (
+							<img
+								class="rounded-2xl"
+								width={720}
+								height={360}
+								src={post.data.thumbnail}
+								alt=""
+							/>
+						)}
+						<p class="text-xl my-4">{post.data.description}</p>
+					</article>
+					<hr class="border-slate-400" />
+				</a>
+			))
+		}
 	</Section>
 </BaseLayout>
