--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -21,7 +21,7 @@ const { title, date, updatedDate, thumbnail } = post.data;
 <BaseLayout>
 	<Section class="prose prose-invert max-w-2xl">
 		{thumbnail && <img width={720} height={360} src={thumbnail} alt="" />}
-		<h1 class="title">{title}</h1>
+		<h1 class="text-5xl">{title}</h1>
 		<FormattedDate date={date} />
 		{
 			updatedDate && (
@@ -31,7 +31,6 @@ const { title, date, updatedDate, thumbnail } = post.data;
 			)
 		}
 		<hr />
-		<h1>{post.data.title}</h1>
 		<Content />
 	</Section>
 </BaseLayout>
