--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ const projects = projectsCollection.map((project) => ({
 	name: project.data.name,
 	description: project.data.description,
 	url: `/projects/${project.slug}`,
+	thumbnail: project.data.thumbnail,
 }));
 
 const blogCollection = await getCollection("blog");
@@ -79,7 +80,17 @@ const blogs = blogCollection
 							</a>
 						</p>
 					</div>
-					<div class="col-span-1"></div>
+					<div class="col-span-1">
+						{data.thumbnail && (
+							<img
+								class="mx-auto rounded-xl"
+								src={data.thumbnail}
+								alt="Test"
+								width={500}
+								height={300}
+							/>
+						)}
+					</div>
 				</Card>
 			))
 		}
