--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const classProp = Astro.props.class;
 
-const classes = twMerge("mx-auto max-w-6xl mt-12", classProp);
+const classes = twMerge("mx-auto max-w-6xl py-12", classProp);
 ---
 
 <section class={classes}>
