--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,7 +9,7 @@ const posts = (await getCollection("blog")).sort(
 );
 ---
 
-<BaseLayout>
+<BaseLayout title="Blog - Harry Ross - Full Stack Developer">
 	<Section>
 		{
 			posts.map((post) => (
