--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,17 +2,24 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+
+export interface Props {
+	title?: string;
+	description?: string;
+	image?: string;
+}
+
+const { title, description, image } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<BaseHead title={title} description={description} image={image} />
 	</head>
-	<body class="bg-zinc-800 text-white">
-		<Header title={SITE_TITLE} />
-		<main class="">
+	<body class="bg-zinc-900 text-white">
+		<Header />
+		<main class="bg-zinc-800 text-white">
 			<slot />
 		</main>
 		<Footer />
