--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,6 @@
 ---
+import { Icon } from "astro-icon";
+
 const navItems = [
 	{
 		name: "Home",
@@ -23,9 +25,9 @@ const navItems = [
 	class="w-full inline-flex border-b-[1px] p-5 tracking-[0.35em] bg-zinc-900"
 >
 	<div class="flex-1">
-		<span class="text-white pl-6 uppercase font-semibold">Harry Ross</span>
+		<span class="text-white md:pl-6 uppercase font-semibold">Harry Ross</span>
 	</div>
-	<div class="flex-none flex items-center">
+	<div class="hidden md:flex flex-none items-center">
 		{
 			navItems.map((item) => {
 				return (
@@ -36,4 +38,5 @@ const navItems = [
 			})
 		}
 	</div>
+	<Icon class="md:hidden" name="uil:bars" height="1.5rem" width="1.5rem" />
 </nav>
