Added padding to section and card for responsive display

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -11,5 +11,7 @@ const classes = twMerge("mx-auto max-w-6xl py-12", classProp);
 ---
 
 <section class={classes}>
-	<slot />
+	<div class="mx-2">
+		<slot />
+	<div>
 </section>
