--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,7 +102,7 @@ const blogs = blogCollection
 		<div class="md:grid md:grid-cols-2 gap-4">
 			{
 				blogs.map((blog) => (
-					<Card>
+					<Card class="max-md:my-4">
 						<h2 class="py-2 text-4xl font-bold tracking-wider">{blog.title}</h2>
 						<p class="py-4 text-xl">{blog.description}</p>
 						<p class="text-lg">
