--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,9 +43,9 @@ const blogs = blogCollection
 	{
 		/* Maybe should be h-screen, but not sure how to do the margin for the header block */
 	}
-	<section class="flex bg-gradient-to-b from-[#4F7D8B] h-[48rem] mb-12">
+	<section class="flex bg-gradient-to-b from-[#4F7D8B] md:h-[48rem] mb-12">
 		<div
-			class="mt-36 flex max-md:flex-col md:flex-row mx-auto md:h-[25rem] w-[56rem] bg-[#1E1E1E] rounded-3xl border-[#9B9B9B] border-[1px] p-16"
+			class="md:mt-36 mt-2 flex max-md:flex-col md:flex-row mx-auto md:h-[25rem] w-[56rem] bg-[#1E1E1E] rounded-3xl border-[#9B9B9B] border-[1px] md:p-16 p-10 max-md:mx-6"
 			id="intro-box"
 		>
 			<div class="md:w-64 flex flex-col justify-center">
