--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,22 +21,33 @@ const navItems = [
 ];
 ---
 
+<script>
+	const dropdown = document.getElementById("dropdown");
+	const navbar = document.getElementById("navbar");
+
+	dropdown.addEventListener("click", () => {
+		navbar.classList.toggle("hidden");
+		console.log("test")
+	});
+</script>
+
 <nav
-	class="w-full inline-flex border-b-[1px] p-5 tracking-[0.35em] bg-zinc-900"
+	class="w-full md:flex flex-row border-b-[1px] p-2 tracking-[0.35em] bg-zinc-900"
 >
-	<div class="flex-1">
-		<span class="text-white md:pl-6 uppercase font-semibold">Harry Ross</span>
+	<div class="flex-1 max-md:flex flex-row p-4">
+		<span class="text-white md:pl-6 uppercase font-semibold flex-1">Harry Ross</span>
+		<Icon class="md:hidden cursor-pointer" name="uil:bars" height="1.5rem" width="1.5rem" id="dropdown" />
 	</div>
-	<div class="hidden md:flex flex-none items-center">
+	
+	<div class="hidden md:flex flex-none max-md:flex-col" id="navbar">
 		{
 			navItems.map((item) => {
 				return (
-					<a href={item.link} class="px-5">
-						<span class="uppercase font-light text-white">{item.name}</span>
+					<a href={item.link} class="">
+						<div class="hover:bg-zinc-800 px-5 py-4 uppercase font-light text-white">{item.name}</div>
 					</a>
 				);
 			})
 		}
 	</div>
-	<Icon class="md:hidden" name="uil:bars" height="1.5rem" width="1.5rem" />
 </nav>
