Added rounded navbar links, fixed third party broken images

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -43,7 +43,7 @@ const navItems = [
 			navItems.map((item) => {
 				return (
 					<a href={item.link} class="">
-						<div class="hover:bg-zinc-800 px-5 py-4 uppercase font-light text-white">{item.name}</div>
+						<div class="hover:bg-zinc-800 rounded-xl px-5 py-4 uppercase font-light text-white">{item.name}</div>
 					</a>
 				);
 			})
