--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,10 +10,10 @@ const navItems = [
 		name: "Blog",
 		link: "/blog",
 	},
-	{
-		name: "About",
-		link: "/about",
-	},
+	// {
+	// 	name: "About",
+	// 	link: "/about",
+	// },
 	{
 		name: "GitHub",
 		link: "https://github.com/Harry-Ross",
@@ -25,8 +25,8 @@ const navItems = [
 	const dropdown = document.getElementById("dropdown");
 	const navbar = document.getElementById("navbar");
 
-	dropdown.addEventListener("click", () => {
-		navbar.classList.toggle("hidden");
+	dropdown?.addEventListener("click", () => {
+		navbar?.classList.toggle("hidden");
 	});
 </script>
 
