--- a/src/components/TechIcon.astro
+++ b/src/components/TechIcon.astro
@@ -2,9 +2,15 @@
 import { Icon } from "astro-icon";
 
 export interface Props {
-  name: string;
+	name: string;
 }
 
 const { name } = Astro.props;
 ---
-<Icon class="fill-gray-400 text-gray-400 mr-4" name={name} width="1.5rem" height="1.5rem" />
+
+<Icon
+	class="fill-gray-400 text-gray-400 mr-4"
+	name={name}
+	width="1.2rem"
+	height="1.2rem"
+/>
