--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Card from "../components/Card.astro";
 import Section from "../components/Section.astro";
-import { Image } from "@astrojs/image/components";
-import { Icon } from "astro-icon";
+import { Image } from "astro:assets";
 
 import portrait from "../../public/harry-portrait.jpg";
 import { getCollection } from "astro:content";
