Changed project image to next/image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,7 +111,7 @@ const icons = [
 					</div>
 					<div class="col-span-1">
 						{data.thumbnail && (
-							<img
+							<Image
 								class="mx-auto rounded-xl"
 								src={data.thumbnail}
 								alt="Test"
