--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -26,6 +26,7 @@ const navItems = [
 	const navbar = document.getElementById("navbar");
 
 	dropdown?.addEventListener("click", () => {
+		console.log("got here");
 		navbar?.classList.toggle("hidden");
 	});
 </script>
@@ -34,16 +35,26 @@ const navItems = [
 	class="w-full md:flex flex-row border-b-[1px] p-2 tracking-[0.35em] bg-zinc-900"
 >
 	<div class="flex-1 max-md:flex flex-row p-4">
-		<span class="text-white md:pl-6 uppercase font-semibold flex-1">Harry Ross</span>
-		<Icon class="md:hidden cursor-pointer" name="uil:bars" height="1.5rem" width="1.5rem" id="dropdown" />
+		<span class="text-white md:pl-6 uppercase font-semibold flex-1"
+			>Harry Ross</span
+		>
+		<Icon
+			class="md:hidden cursor-pointer"
+			name="uil:bars"
+			height="1.5rem"
+			width="1.5rem"
+			id="dropdown"
+		/>
 	</div>
-	
+
 	<div class="hidden md:flex flex-none max-md:flex-col" id="navbar">
 		{
 			navItems.map((item) => {
 				return (
 					<a href={item.link} class="">
-						<div class="hover:bg-zinc-800 rounded-xl px-5 py-4 uppercase font-light text-white">{item.name}</div>
+						<div class="hover:bg-zinc-800 rounded-xl px-5 py-4 uppercase font-light text-white">
+							{item.name}
+						</div>
 					</a>
 				);
 			})
