--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import { slide } from "astro:transitions";
 
 export interface Props {
 	title?: string;
@@ -12,14 +13,17 @@ export interface Props {
 const { title, description, image } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<BaseHead title={title} description={description} image={image} />
 	</head>
 	<body class="bg-zinc-900 text-white">
 		<Header />
-		<main class="bg-zinc-800 text-white">
+		<main
+			class="bg-zinc-800 text-white"
+			transition:animate={slide({ duration: "1s" })}
+		>
 			<slot />
 		</main>
 		<Footer />
