--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -6,7 +6,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 export async function getStaticPaths() {
 	const posts = await getCollection("blog");
-	return posts.map((post) => ({
+	return posts.filter(post => !post.data.draft).map((post) => ({
 		params: { slug: post.slug },
 		props: post,
 	}));
