--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -4,9 +4,9 @@ import FormattedDate from "../../components/FormattedDate.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import Section from "../../components/Section.astro";
 
-const posts = (await getCollection("blog")).sort(
-	(a, b) => b.data.date.valueOf() - a.data.date.valueOf()
-);
+const posts = (await getCollection("blog"))
+	.filter((item) => !item.data.draft)
+	.sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
 <BaseLayout title="Blog - Harry Ross - Full Stack Developer">
@@ -16,7 +16,9 @@ const posts = (await getCollection("blog")).sort(
 				<a href={`/blog/${post.slug}/`}>
 					<article class="my-8">
 						<div class="my-4">
-							<h2 class="text-4xl mb-1 font-bold" transition:name="blog-title">{post.data.title}</h2>
+							<h2 class="text-4xl mb-1 font-bold" transition:name="blog-title">
+								{post.data.title}
+							</h2>
 							<FormattedDate class="italic" date={post.data.date} />
 						</div>
 						{post.data.thumbnail && (
