--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -51,4 +51,14 @@ const {
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-G9S3RYYR81"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G9S3RYYR81');
+</script>
+
 <ViewTransitions />
