--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -51,7 +51,7 @@ const navItems = [
 		{
 			navItems.map((item) => {
 				return (
-					<a href={item.link} class="">
+					<a href={item.link}>
 						<div class="hover:bg-zinc-800 rounded-xl px-5 py-4 uppercase font-light text-white">
 							{item.name}
 						</div>
