changed image to be served in higher resolution

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,11 +88,12 @@ const icons = [
 			</div>
 			<div class="flex items-center justify-end grow">
 				<Image
-					class="rounded-full md:float-right mx-auto md:mx-0 my-4"
+					class="rounded-full md:float-right mx-auto md:mx-0 my-4 w-64 h-64"
 					src={portrait}
 					alt="Harry's face"
-					width={260}
-					height={260}
+					width={390}
+					height={392}
+					loading="eager"
 				/>
 			</div>
 		</div>
