Added new position

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -162,11 +162,8 @@ const icons = [
 		<h2 class="text-5xl font-bold pb-12">About Me</h2>
 		<p class="text-lg">
 			Hi there, I'm Harry - a full stack .NET and JavaScript developer. I'm a
-			Software Engineer at <a class="underline" href="https://www.ssw.com.au/"
-				>ssw.com.au</a
-			> and SSW TV <a class="underline" href="https://tv.ssw.com.au/"
-				>tv.ssw.com</a
-			>.
+			Full Stack Developer at <a class="underline" href="https://reachout.com/"
+				>ReachOut</a>
 		</p>
 	</Section>
 </BaseLayout>
