--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -52,7 +52,7 @@ const {
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <!-- Google tag (gtag.js) -->
-<script
+<!-- <script
 	type="text/partytown"
 	src="https://www.googletagmanager.com/gtag/js?id=G-G9S3RYYR81"></script>
 <script type="text/partytown">
@@ -63,7 +63,7 @@ const {
 	gtag("js", new Date());
 
 	gtag("config", "G-G9S3RYYR81");
-</script>
+</script> -->
 
 <script
 	defer
