--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,9 +8,9 @@ import { ViewTransitions } from "astro:transitions";
 import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from "../consts";
 
 export interface Props {
-	title?: string;
-	description?: string;
-	image?: string;
+	title?: string | undefined;
+	description?: string | undefined;
+	image?: string | undefined;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
@@ -67,6 +67,7 @@ const {
 
 <script
 	defer
+	is:inline
 	src="https://analytics.us.umami.is/script.js"
 	data-website-id="30553952-d8ca-4a69-9b90-3ef11dd3baa0"></script>
 
