--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ import { slide } from "astro:transitions";
 export interface Props {
 	title?: string;
 	description?: string;
-	image?: string;
+	image?: string | undefined;
 }
 
 const { title, description, image } = Astro.props;
