--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,17 +5,29 @@ const today = new Date();
 ---
 
 <footer class="bg-zinc-900 p-6 text-center">
-	<div class="mx-auto mb-4 flex items-center justify-center">
-		<SocialIcon link="https://github.com/harry-ross" name="cib:github" description="Link to GitHub" />
-		<SocialIcon link="https://twitter.com/harryrossdev" name="cib:twitter" description="Link to Twitter" />
-		<SocialIcon
-			link="https://www.linkedin.com/in/harry-ross-37940617b/"
-			name="cib:linkedin-in"
-			description="Link to LinkedIn"
-		/>
-		<SocialIcon link="mailto:hazross@hotmail.com" name="mi:email" description="Email me here" />
-	</div>
-	<div>
-		{today.getFullYear()} Harry Ross. All rights reserved.
-	</div>
+  <div class="mx-auto mb-4 flex items-center justify-center">
+    <SocialIcon
+      link="https://github.com/harry-ross"
+      name="cib:github"
+      description="Link to GitHub"
+    />
+    <SocialIcon
+      link="https://twitter.com/harryrossdev"
+      name="cib:twitter"
+      description="Link to Twitter"
+    />
+    <SocialIcon
+      link="https://www.linkedin.com/in/harry-ross-37940617b/"
+      name="cib:linkedin-in"
+      description="Link to LinkedIn"
+    />
+    <SocialIcon
+      link="mailto:hazross@hotmail.com"
+      name="mi:email"
+      description="Email me here"
+    />
+  </div>
+  <div>
+    {today.getFullYear()} Harry Ross. All rights reserved.
+  </div>
 </footer>
