--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,7 +1,7 @@
 ---
 export interface Props {
-	date: Date;
-	class?: string;
+  date: Date;
+  class?: string;
 }
 
 const { date } = Astro.props;
@@ -9,11 +9,11 @@ const classProp = Astro.props.class;
 ---
 
 <time class={classProp} datetime={date.toISOString()}>
-	{
-		date.toLocaleDateString('en-us', {
-			year: 'numeric',
-			month: 'short',
-			day: 'numeric',
-		})
-	}
+  {
+    date.toLocaleDateString("en-us", {
+      year: "numeric",
+      month: "short",
+      day: "numeric",
+    })
+  }
 </time>
