--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,7 +2,7 @@
 import { twMerge } from "tailwind-merge";
 
 interface Props {
-	class?: string;
+  class?: string;
 }
 
 const classProp = Astro.props.class;
@@ -11,7 +11,8 @@ const classes = twMerge("mx-auto max-w-6xl py-12", classProp);
 ---
 
 <section class={classes}>
-	<div class="mx-2">
-		<slot />
-	<div>
+  <div class="mx-2">
+    <slot />
+    <div></div>
+  </div>
 </section>
