--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const projectsCollection = await getCollection("projects");
 const projects = projectsCollection.map((project) => ({
   name: project.data.name,
   description: project.data.description,
-  url: `/projects/${project.slug}`,
+  url: `/projects/${project.id}`,
   thumbnail: project.data.thumbnail,
   thumbnailVideo: project.data.thumbnailVideo,
 }));
@@ -25,7 +25,7 @@ const blogs = blogCollection
   .map((blog) => ({
     title: blog.data.title,
     description: blog.data.description,
-    url: `/blog/${blog.slug}`,
+    url: `/blog/${blog.id}`,
     date: blog.data.date,
   }))
   .sort((a, b) => b.date.valueOf() - a.date.valueOf());
