upgraded to tailwind v4

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const icons = [
   {
     /* Maybe should be h-screen, but not sure how to do the margin for the header block */
   }
-  <section class="flex bg-gradient-to-b from-[#4F7D8B] md:h-[48rem] mb-12">
+  <section class="flex bg-linear-to-b from-[#4F7D8B] md:h-[48rem] mb-12">
     <div
       class="md:mt-36 mt-2 flex max-md:flex-col md:flex-row mx-auto md:h-[26rem] w-[50rem] bg-[#1E1E1E] rounded-3xl border-[#9B9B9B] border-[1px] md:p-16 p-10 max-md:mx-6 opacity-0"
       id="intro-box"
